classes.js complete

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -11,6 +11,7 @@
   <script src="closure.js"></script>
   <script src="prototypes.js"></script>
   <script src="classes.js"></script>
+  <style>html { color: #eee; background: #333; }</style>
 </head>
 
 <body>
